# Komega

./: .gitignore  Makefile.am  Makefile.in  README.md  README_ja.md  aclocal.m4  config.h.in  configure  configure.ac  http2https.sh  index.html  komega_algorithm_ja.html  komega_contact_ja.html  komega_copyright_ja.html  komega_ja.html  komega_left_ja.html  komega_overview_ja.html  komega_ref_ja.html  komega_right_ja.html  komega_usage_ja.html  komega_workflow_ja.html  make.sys  make.sys.in  makefile
.github/workflows/: ci.yml
app/sample/: Shiftk.nb
app/sample/denovo/: namelist.def
app/sample/denovo/output/: ResVec.dat0
app/sample/from_file/output/: ResVec.dat0
app/src/: Makefile.am  Makefile.in  dyn_mod.F90  dyn_mod.f90  ham_prod.F90  ham_prod.f90  lobpcg_mod.F90  lobpcg_mod.f90  makefile  shiftk.F90  shiftk.f90  shiftk_io.F90  shiftk_io.f90  shiftk_vals.f90
app/test/: Shiftk.nb  namelist.def
app/test/denovo/: namelist.def
app/test/from_file/: namelist.def
autom4te.cache/: output.0  requests  traces.0
doc/: ShiftK.tex  index.html  komega.doxygen
doc/software/: ShiftKSoft.tex  flow.xbb  spin.xbb
doc/software/en/: conf.py  shiftk_env_en.rst  shiftk_flow_en.rst  shiftk_format_en.rst  shiftk_overview_en.rst
doc/software/ja/: conf.py  index.rst  shiftk_flow_ja.rst  shiftk_format_ja.rst  shiftk_overview_ja.rst
library_en/: genindex.html  index.html  komega_algorithm_en.html  komega_contact_en.html  komega_copyright_en.html  komega_overview_en.html  komega_usage_en.html  komega_workflow_en.html  objects.inv  search.html  searchindex.js
library_en/_sources/: index.txt  komega_algorithm_en.txt  komega_usage_en.txt  komega_workflow_en.txt
library_ja/: genindex.html  index.html  komega_algorithm_ja.html  komega_contact_ja.html  komega_copyright_ja.html  komega_overview_ja.html  komega_ref_ja.html  komega_usage_ja.html  komega_workflow_ja.html  objects.inv  search.html  searchindex.js
library_ja/_sources/: index.txt  komega_algorithm_ja.txt  komega_contact_ja.txt  komega_copyright_ja.txt  komega_usage_ja.txt  komega_workflow_ja.txt
software/en/: Makefile  conf.py  shiftk_copy_en.rst  shiftk_env_en.rst  shiftk_flow_en.rst
software/en/_build/doctrees/: environment.pickle  index.doctree  shiftk_contact_en.doctree  shiftk_copy_en.doctree  shiftk_env_en.doctree  shiftk_flow_en.doctree  shiftk_format_en.doctree  shiftk_overview_en.doctree
software/en/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  shiftk_contact_en.html  shiftk_copy_en.html  shiftk_env_en.html  shiftk_flow_en.html  shiftk_format_en.html  shiftk_overview_en.html
software/en/_build/html/_sources/: index.rst.txt  shiftk_contact_en.txt  shiftk_env_en.txt  shiftk_flow_en.rst.txt  shiftk_format_en.rst.txt  shiftk_overview_en.txt
software/en/_build/latex/: flow.xbb  komega.xbb  shiftk.aux  shiftk.dvi  shiftk.fdb_latexmk  shiftk.fls  shiftk.ilg  shiftk.out  shiftk.tex  shiftk.toc  spin.xbb
software/figs/: KrylovSoft_ver.0.1.eps
software/ja/: conf.py  shiftk_env_ja.rst  shiftk_flow_ja.rst  shiftk_format_ja.rst
software/ja/_build/doctrees/: environment.pickle  index.doctree  shiftk_contact_ja.doctree  shiftk_copy_ja.doctree  shiftk_env_ja.doctree  shiftk_flow_ja.doctree  shiftk_format_ja.doctree  shiftk_overview_ja.doctree
software/ja/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  shiftk_contact_ja.html  shiftk_copy_ja.html  shiftk_env_ja.html  shiftk_flow_ja.html  shiftk_format_ja.html  shiftk_overview_ja.html
software/ja/_build/html/_sources/: shiftk_contact_ja.txt  shiftk_copy_ja.rst.txt  shiftk_env_ja.rst.txt  shiftk_flow_ja.rst.txt  shiftk_overview_ja.rst.txt  shiftk_overview_ja.txt
software/ja/_build/html/_static/: documentation_options.js
software/ja/_build/latex/: Makefile  flow.xbb  komega.xbb  latexmkjarc  make.bat  shiftk.aux  shiftk.dvi  shiftk.out  shiftk.tex  shiftk.toc  spin.xbb
software_ja/: genindex.html  index.html  objects.inv  search.html  searchindex.js  shiftk_contact_ja.html  shiftk_copy_ja.html  shiftk_env_ja.html  shiftk_flow_ja.html  shiftk_format_ja.html  shiftk_overview_ja.html
software_ja/_sources/: index.txt  shiftk_copy_ja.txt  shiftk_env_ja.txt  shiftk_flow_ja.txt
src/: Makefile.am  Makefile.in  komega.h  komega_bicg.F90  komega_bicg.f90  komega_bicg.h  komega_cg_c.F90  komega_cg_c.f90  komega_cg_c.h  komega_cg_r.F90  komega_cg_r.f90  komega_cg_r.h  komega_cocg.F90  komega_cocg.f90  komega_cocg.h  komega_math.F90  komega_vals.F90  makefile  mathlib.f90  shifted_bicg.f90  shifted_cg_c.f90  shifted_cg_r.f90  shifted_cocg.f90  shifted_krylov.f90  shifted_krylov_math.f90  shifted_krylov_vals.f90  solve_rr.f90
src/shared/: komega_bicg.h  komega_cg_c.h  komega_cg_r.h  komega_cocg.h
src/shared_mpi/: pkomega_bicg.h  pkomega_cg_c.h  pkomega_cg_r.h  pkomega_cocg.h
test/: Makefile.am  Makefile.in  check_configure_zdot.sh  diagonalize.F90  diagonalize.f90  krylov.in  make_ham.F90  make_ham.f90  makefile  mathlib.F90  mathlib.f90  real_freq.in  regression_complex.in  regression_real.in  run_tests.sh  solve_cc.F90  solve_cc.f90  solve_cr.F90  solve_cr.f90  solve_rc.F90  solve_rc.f90  solve_rr.F90  solve_rr.f90  test_lzconv.F90
